fix: Align tx action buttons to the bottom (#291)
* fix: Align tx action buttons to the bottom

* refactor: Use enum for StepState, use Link instead of Button

* fix: Adjust fontSize of Show all link

--- a/components/transactions/TxDetails/styles.module.css
+++ b/components/transactions/TxDetails/styles.module.css
@@ -47,7 +47,10 @@
 }
 
 .txSigners {
-  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: var(--space-3);
   border-left: 2px solid var(--color-border-light);
 }
 
